# NeuralNet

./: CMakeLists.txt  LICENSE
example/: CMakeLists.txt  mnist.cpp
src/: CMakeLists.txt  OneMNISTReader.cpp  OneMNISTReader.hpp  OneMatrix.hpp  OneMatrix.txx  OneNetwork.cpp  OneNetwork.hpp  OneVector.hpp  OneVector.txx
tests/: CMakeLists.txt  MatrixTest.cpp  NetworkTest.cpp  VectorTest.cpp  main.cpp
